<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.feuyeux.hello.cache</groupId>
  <artifactId>hello-cache</artifactId>
  <packaging>pom</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <modules>
    <module>cache-on-heap</module>
    <module>cache-off-heap</module>
    <module>cache-remote</module>
    <module>cache-disk</module>
    <module>cache-benchmark</module>
    <module>cache-app</module>
    <module>cache-core</module>
  </modules>
  <name>hello-cache</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <springboot.version>3.2.1</springboot.version>
    <!--  remote -->
    <redisson.version>3.16.8</redisson.version>
    <jedis.version>4.2.3</jedis.version>
    <lettuce.version>6.1.6.RELEASE</lettuce.version>
    <!-- local jvm -->
    <cache2k.version>2.6.1.Final</cache2k.version>
    <caffeine2.version>2.9.3</caffeine2.version>
    <caffeine3.version>3.1.1</caffeine3.version>
    <guava.version>31.1-jre</guava.version>
    <!-- local off heap -->
    <ohc.version>0.7.4</ohc.version>
    <lmdb.version>0.8.2</lmdb.version>
    <picocli.version>4.6.3</picocli.version>

    <junit.version>5.8.2</junit.version>
    <lombok.version>1.18.30</lombok.version>

    <jmh.version>1.35</jmh.version>
    <byte-buddy.version>1.14.11</byte-buddy.version>
    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>
            <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${springboot.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <version>${springboot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
